--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
+{
+  "name": "nis2proj",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+    // ... ostale ovisnosti
+  },
+  "devDependencies": {
+    // ... dev ovisnosti
+  }
 }
