--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.0.10",
     "firebase": "^10.10.0",
+    "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "i18next": "^23.10.1",
     "jspdf": "^2.5.2",
